# macaron

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/macaron/: base.h  macaron.h  types.h  viewer.h
samples/: CMakeLists.txt  dumper.c  dumper.h  main.c
samples/config/: carrom_config_example.toml
src/: CMakeLists.txt  config_loader.c  core.c  core.h  defaults.c  game_state.c  puck.c  viewer.c
